--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@
 
     --menufont: 5svh;
     --headfont: 3svh;
+    --phonefont: 3.5svh;
 }
 
 /* --bg: #6096BA; --font: #A3CEF1; --rd: #274C77;
